# tour_du_monde

./: .gitignore  .gitmodules  BUILD.txt  CMakeLists.txt  COPYING.txt  README.md  README.txt  build_all.txt  doxygen.config  index.html  params.json  test_runner.sh  user_settings.cmake  user_settings.cmake.template
src/: CMakeLists.txt  renameFiles.sh  shared.pri  tour_du_monde.pro
src/app/: Bootloader.cpp  Bootloader.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  TourDeMondeApplication.cpp  TourDeMondeApplication.h  TourDuMondeApplication.cpp  TourDuMondeApplication.h  app.pro  demo_project.proj  main.cpp  tour_de_monde.sh  tour_du_monde.sh
src/booting/: BootloaderBase.cpp  CMakeLists.txt  CarouselBootloader.cpp
src/carousel/: CMakeLists.txt
src/carto/: AbstractLayer.cpp  AbstractLayer.h  CartoComponent.cpp  CartoComponent.h  CartoScriptExtension.cpp  CartoScriptExtension.h  CategorizedRenderer.cpp  CategorizedRenderer.h  DefaultNavigationHandler.cpp  DefaultNavigationHandler.h  DefaultSymbol.cpp  DefaultSymbol.h  FeatureLayer.cpp  FeatureLayer.h  FeatureLayerDrawingTask.h  IFeatureRenderer.h  IFeatureRendererVisitor.h  ILayerCollection.h  ILayerVisitor.h  ILegendGroup.h  IMap.h  IRendererCategoryCollection.h  ITourDeMondeDocument.h  ITourDeMondeDocumentController.h  ITourDuMondeDocument.h  ITourDuMondeDocumentController.h  LayerCollection.cpp  LayerCollection.h  LayerType.cpp  LayerType.h  LegendClass.cpp  LegendClass.h  LegendGroup.cpp  LegendGroup.h  Map.cpp  Map.h  RendererCategory.cpp  RendererCategory.h  RendererCategoryCollection.cpp  RendererCategoryCollection.h  (+15 more)
src/cartoPersist/: CartoPersistComponent.cpp  CartoPersistComponent.h  CartoPersistExtension.cpp  CartoPersistExtension.h  CategorizedRendererPersist.cpp  CategorizedRendererPersist.h  FeatureClassPersist.cpp  FeatureClassPersist.h  FeatureLayerPersist.cpp  FeatureLayerPersist.h  FeatureRendererPersistCreator.cpp  FeatureRendererPersistCreator.h  GradientFillSymbolPersist.cpp  GradientFillSymbolPersist.h  IFeatureRendererPersist.h  ILayerPersist.h  ISymbolPersist.h  LayerPersistCreator.cpp  LayerPersistCreator.h  LegendClassPersist.cpp  LegendClassPersist.h  LegendGroupPersist.cpp  LegendGroupPersist.h  MapPersist.cpp  MapPersist.h  PictureFillSymbolPersist.cpp  PictureFillSymbolPersist.h  PictureMarkerSymbolPersist.cpp  PictureMarkerSymbolPersist.h  RendererCategoryCollectionPersist.cpp  RendererCategoryCollectionPersist.h  RendererCategoryPersist.cpp  RendererCategoryPersist.h  SimpleFillSymbolPersist.cpp  SimpleFillSymbolPersist.h  SimpleLineSymbolPersist.cpp  SimpleLineSymbolPersist.h  SimpleMarkerSymbolPersist.cpp  SimpleMarkerSymbolPersist.h  SimpleRendererPersist.cpp  (+12 more)
src/cartoUI/: AddShapeOperation.cpp  AddShapeOperation.h  CartoUIComponent.cpp  CartoUIComponent.h  CartoUIInteractiveExtension.cpp  CartoUIInteractiveExtension.h  CartoUIScriptExtension.cpp  CartoUIScriptExtension.h  CategorizedRendererWidget.cpp  CategorizedRendererWidget.h  CategorizedRendererWidget.ui  CoordsTracker.cpp  DefaultNavigationHandler.cpp  DefaultNavigationHandler.h  FeatureClassModel.cpp  FeatureClassModel.h  FeatureClassTableView.cpp  FeatureClassTableView.h  FeatureLayerDelegate.h  FeatureLayerItem.cpp  FeatureLayerItem.h  FeatureLayerPropertiesWidget.cpp  FeatureLayerPropertiesWidget.h  FeatureLayerPropertiesWidget.ui  FeatureRendererWidget.cpp  FeatureRendererWidget.h  FeatureRendererWidgetCreator.cpp  FeatureRendererWidgetCreator.h  LayerItemCreator.cpp  LayerItemCreator.h  LayerPropertyWidgetCreator.cpp  LayerPropertyWidgetCreator.h  LayerTreeModel.cpp  LayerTreeModel.h  LayerTreeModelcpp  LayerTreeModelh  LayerTreeView.cpp  LayerTreeView.h  LegendClassItem.cpp  LegendClassItem.h  (+15 more)
src/components/: CMakeLists.txt
src/componentsystem/: AbsolutePathComponentLocationConstructorDelegate.cpp  BaseComponent.cpp  CMakeLists.txt  ComponentDefinition.cpp  ComponentDependencies.cpp  ComponentInitialiser.cpp  ComponentInstaller.cpp  ComponentLoader.cpp  ComponentManager.cpp  ComponentProvider.cpp  CompositeComponentProvider.cpp  DefinitionConstuctor.cpp  DependenciesSolvingResult.cpp  DependencySolver.cpp  DirectoryComponentProvider.cpp  DirectoryInstaller.cpp  DirectoryWatchingComponentProvider.cpp  FileComponentProvider.cpp  IComponent.cpp  ProxyComponent.cpp  XmlDefinitionParser.cpp
src/componentsystemUI/: CMakeLists.txt  ComponentDefinitionsAdapter.cpp  ComponentDefinitionsModel.cpp  ComponentManagerModel.cpp
src/componentsystemui/: CMakeLists.txt  ComponentDefinitionsModel.cpp  ComponentSystemUI.definition  ComponentSystemUIComponent.cpp  ComponentsDialog.cpp  ComponentsDialog.ui  EnableComponentCommand.cpp  InstallComponentsCommand.cpp
src/display/: CoordsTracker.cpp  CoordsTracker.h  DefaultSymbol.cpp  DefaultSymbol.h  DisplayComponent.cpp  DisplayComponent.h  DisplayScriptExtension.cpp  DisplayScriptExtension.h  DisplayTransformation.cpp  DisplayTransformation.h  FillSymbol.cpp  FillSymbol.h  GradientFillSymbol.cpp  GradientFillSymbol.h  GradientPathBrush.h  GradientPathBrush_stub.cpp  GradientPathBrush_windows.cpp  IDisplay.h  IDrawingTask.h  ISymbol.h  ISymbolVisitor.h  LineSymbol.cpp  LineSymbol.h  MarkerSymbol.cpp  MarkerSymbol.h  MultithreadDisplay.cpp  MultithreadDisplay.h  PictureFillSymbol.cpp  PictureFillSymbol.h  PictureMarkerSymbol.cpp  PictureMarkerSymbol.h  RectRubberBand.cpp  RenderThread.cpp  RenderThread.h  SimpleDisplay.cpp  SimpleDisplay.h  SimpleFillSymbol.cpp  SimpleFillSymbol.h  SimpleLineSymbol.cpp  SimpleLineSymbol.h  (+24 more)
src/displayWidgets/: ColorPickerButtont.cpp  ColorPickerButtont.h  DisplayWidgetsComponent.cpp  DisplayWidgetsComponent.h  FillSymbolEditorWidget.cpp  FillSymbolEditorWidget.h  GradientFillSymbolWidget.cpp  GradientFillSymbolWidget.h  GradientFillSymbolWidget.ui  LineSymbolEditorWidget.cpp  LineSymbolEditorWidget.h  MarkerSymbolEditorWidget.cpp  MarkerSymbolEditorWidget.h  PictureFillSymbolWidget.cpp  PictureFillSymbolWidget.h  PictureFillSymbolWidget.ui  PictureMarkerSymbolWidget.cpp  PictureMarkerSymbolWidget.h  SimpleFillSymbolWidget.cpp  (+16 more)
tests/: CMakeLists.txt
(+1629 files in other folders)
